Fix endpoint to accept cos id
